# finquery

./: .gitignore  README.md  pyproject.toml  rag.ipynb  railway.toml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: database.py  main.py
backend/src/models/: schemas.py  user.py
backend/src/services/: auth.py  ingest.py  process_tables.py  rag_engine.py  vector_store.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatArea.jsx  InputBar.jsx  Message.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Auth.css  Dashboard.jsx  Login.jsx  Register.jsx
src/: document_processor.py  embeddings.py  ingest.py  main.py  rag_engine.py  vector_store.py
src/models/: schemas.py
src/services/: ingest.py  rag_engine.py  retrieval.py  vector_store.py
