[project]
name = "finquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.124.2",
    "langchain>=1.1.3",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.7",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
    "together>=1.5.32",
    "uvicorn>=0.38.0",
]
